--- a/scripts/doxity/config.toml
+++ b/scripts/doxity/config.toml
@@ -1,9 +1,9 @@
-linkPrefix = ""
+linkPrefix = "/doxity-playground"
 name = "truffle-init-webpack"
 license = "MIT"
 version = "0.0.1"
 description = "Frontend example using truffle v3"
-author = "Douglas von Kohorn"
+author = "OttoDevs"
 buildTime = 2017-07-17T11:56:27.859Z
 target = "scripts/doxity"
 src = "contracts/*"
